hphp/hack/test/typecheck/typing_fail_test.php.exp
File "typing_fail_test.php", line 144, characters 3-3:
A semicolon (';') is expected here. (Parsing[1002])
